Fixed filter spacing

--- a/app/assets/stylesheets/application.css
+++ b/app/assets/stylesheets/application.css
@@ -360,7 +360,7 @@
       text-decoration: none;
   }
    .scrollTableHeader a:hover {
-    color:#c9c9c9;
+    color:white;
   }
 
   .scrollTable td {
@@ -417,68 +417,36 @@
     flex-direction:row;
   }
 
-  .scrollTableFilter {
-    border-collapse: separate;
-  }
-
-  /* define height and width of scrollable area. Add 16px to width for scrollbar          */
-  div.tableContainerFilter {
-    border: 0px solid #963;
-    border-collapse: collapse;
-    max-width: 230px;
-    padding-left: 0px;
-    padding-right: 0px;
-  }
-
-  /* set THEAD element to have block level attributes. All other non-IE browsers            */
-  /* this enables overflow to work on TBODY element. All other non-IE, non-Mozilla browsers */
-
-  /* make the TH elements pretty */
-  thead.fixedHeaderFilter th {
-      background: #fff;
-      border: 1px solid #c2c2c2;
-      font-weight: 600;
-      padding: 4px 3px;
-      text-align: left
-  }
-
-  html>body tbody.scrollContentFilter {
-      display: block;
-      white-space: nowrap;
-      border: 1px solid #c2c2c2;
-      border-collapse: collapse;
-      height: 220px;
-      overflow-y: scroll;
-      overflow-x: clip;
-      overscroll-behavior: contain;
-      table-layout:fixed;
-      max-width: 220px;
-      padding: 2px 2px;
-      width: 100%;
-  }
-  tbody.scrollContentFilter tr{
-  padding-top: 3px;
-  padding-bottom: 3px;
-  }
-
-  html>body thead.fixedHeaderFilter {
-    display: table;
-    border-collapse: collapse;
-    table-layout: fixed;
-      overflow: auto;
-      width: 100%;
-      max-width: 220px;
-  }
-  
-  /* remove underline */
-
-.scrollTableFilter a:link {
-    text-decoration: none;
+/* class applies to select element itself, not a wrapper element */
+.select-css {
+  display: block;
+  color: #444;
+  line-height: 1.3;
+  width: 100%;
+  max-width: 180px; /* useful when width is set to anything other than 100% */
+  box-sizing: border-box;
+  margin: 0;
+  border: 1px solid #aaa;
+  -moz-appearance: none;
+  -webkit-appearance: none;
+  appearance: none;
+  background-color: #fff;
 }
 
-.scrollTableFilter a:hover {
-  color:#c9c9c9;
+/* Hover style */
+.select-css:hover {
+  border-color: #888;
 }
+
+/* Set options to normal weight */
+.select-css option {
+  font-weight:normal;
+}
+
+body {
+margin: 2rem;
+}
+
 
 /* Highlight Element */
 
